Updated msmtp as sendmail_path for PHP

--- a/conf.d/custom_php.ini
+++ b/conf.d/custom_php.ini
@@ -31,3 +31,6 @@ asp_tags = off
 
 ; disable user agent verification to not break multiple image upload
 suhosin.session.cryptua = off
+
+; Set sendmail path to MSMTP
+sendmail_path=/usr/bin/msmtp -t
