Updated for PHP 8.0

--- a/conf.d/docker-php-ext-opcache.ini
+++ b/conf.d/docker-php-ext-opcache.ini
@@ -1,4 +1,4 @@
-zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20190902/opcache.so
+zend_extension=opcache
 
 [opcache]
 opcache.enable = 1
